--- a/app/main/templates/main/thank-you.html
+++ b/app/main/templates/main/thank-you.html
@@ -22,7 +22,7 @@
                 <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-text="I just donated to Greenville United!" data-url="https://greenvilleutd.com/donate" data-via="GreenvilleUtd" data-hashtags="GUFC" data-lang="en" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
             <div class="col-1">
-                <div class="fb-share-button" data-href="https://greenvilleutd.com/donate" data-layout="button_count" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fgreenvilleutd.com%2Fdonate&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+                <div class="fb-share-button" data-href="https://greenvilleutd.com/donate" data-layout="button_count" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fgreenvilleutd.com%2Fdonate&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore text-decoration-none">Share on Facebook</a></div>
             </div>
         </div>
     </div>
