--- a/app/about/templates/about/team.html
+++ b/app/about/templates/about/team.html
@@ -8,24 +8,6 @@
   {{ super() }}
   <div class="container-sm">
     <div class="section">
-      <h1 class="">Team Composition</h1>
-      <div class="row g-4 py-4">
-        {% for player in players %}
-        <div class="col-lg-3">
-          <div class="card mx-auto">
-            <img src="{{ player.img_src }}" class="card-img-top img-fluid" alt="{{ player.name }} Image">
-            <div class="card-body">
-              <h5 class="card-title">{{ player.name }}</h5>
-              <h6 class="card-subtitle mb-2 text-muted">{{ player.position }}</h6>
-              <p class="card-text">{{ player.description }}</p>
-              <!-- <a href="#" class="btn btn-primary">Read More</a> -->
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-      </div>
-    </div>
-    <div class="section">
       <h1>Support Staff</h1>
       <p>Without the help from our amazing staff, this club would not be possible.</p>
       <!-- For each team member, list their card -->
@@ -46,7 +28,26 @@
       </div>
     </div>
     <div class="section">
-
+      <h1 class="">Team Roster</h1>
+      <div class="row g-4 py-4">
+        {% for player in players %}
+        <div class="col-lg-3">
+          <div class="card mx-auto">
+            <img src="{{ player.img_src }}" class="card-img-top img-fluid" alt="{{ player.name }} Image">
+            <div class="card-body">
+              <h5 class="card-title">{{ player.name }}</h5>
+              <h6 class="card-subtitle mb-2 text-muted">{{ player.position }}</h6>
+              <p class="card-text">{{ player.description }}</p>
+              <!-- <a href="#" class="btn btn-primary">Read More</a> -->
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+    
+    <div class="section">
+      
     </div>
   </div>
 {% endblock %}
