--- a/app/about/templates/about/vmc.html
+++ b/app/about/templates/about/vmc.html
@@ -17,28 +17,19 @@
             <li>Establish a multi-use stadium to drive economic impact for the city of Greenville</li>
         </ul>
     </div>
-    <div class="container-sm">
+    <div class="container-sm py-5">
         <h1 class="py-3">Mission Statement</h1>
         <p>Greenville United is an organization that serves the diverse community of Greenville NC through the beautiful game of soccer. The club inspires to provide a platform for the community to support and help local players showcase their talent on a regional and national level. We are a club committed to bringing our community and local businesses together through the beautiful game of soccer.</p>
     </div>
     <div class="container-sm">
         <h1 class="py-3">Core Values</h1>
-        <div class="row">
-            <div class="col">
-                <h4>Accountability</h4>
+        <div class="row g-4">
+            {% for value in values %}
+            <div class="col-md-4 text-center" style="max-width: 25rem;">
+                <img src="{{ value.img_src }}" alt="{{ value.name }}" style="max-height: 10rem;">
+                <h4 class="py-3 text-center">{{ value.name }}</h4>
             </div>
-            <div class="col">
-                <h4>Diversity Inclusion</h4>
-            </div>
-            <div class="col">
-                <h4>Customer Focused</h4>
-            </div>
-            <div class="col">
-                <h4>Teamwork</h4>
-            </div>
-            <div class="col">
-                <h4>Continuous Improvement</h4>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
