--- a/app/main/templates/main/index.html
+++ b/app/main/templates/main/index.html
@@ -13,9 +13,9 @@
           <div class="carousel-item active" data-bs-interval="20000">
             <img src="{{ url_for('static', filename='img/header-img.png') }}" class="d-block w-100 img" alt="...">
             <div class="carousel-caption pb-4">
-              <h1>Come to a game!</h1>
-              <p>Our game day festivals have fun for the entire family. Everyone is welcome to join in the legendary festivities!</p>
-              <a href="{{ url_for('community.show_schedule') }}" class="btn carousel-btn">See Schedule</a>
+              <h1>GUFC is going national!</h1>
+              <p>Our Greenville United Football Club is going national! We are on a mission to take this club to the next level, so please consider helping us by making a donation.</p>
+              <a href="{{ url_for('main.show_donate') }}" class="btn carousel-btn">Donate Today</a>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="20000">
@@ -52,7 +52,7 @@
     <div class="row g-3 py-4">
       {% for card in cards %}
       <div class="col-lg-4">
-        <div class="card mx-auto" style="max-width: 20rem;">
+        <div class="card mx-auto" style="max-width: 20rem; height: 25rem">
           <img src="{{ card.img_src }}" class="card-img-top " alt="{{ card.img_title }}">
           <div class="card-body">
             <h5 class="card-title">{{ card.title }}</h5>
@@ -131,7 +131,7 @@
       <li class="nav-item" role="presentation">
         <button class="nav-link active" id="twitter-tab" data-bs-toggle="tab" data-bs-target="#twitter-tab-pane" type="button" role="tab" aria-controls="twitter-tab-pane" aria-selected="true">Twitter</button>
       </li>
-      <li class="nav-item" role="presentation">
+      <!-- <li class="nav-item" role="presentation">
         <button class="nav-link" id="facebook-tab" data-bs-toggle="tab" data-bs-target="#facebook-tab-pane" type="button" role="tab" aria-controls="facebook-tab-pane" aria-selected="false">Facebook</button>
       </li>
       <li class="nav-item" role="presentation">
@@ -139,7 +139,7 @@
       </li>
       <li class="nav-item" role="presentation">
         <button class="nav-link" id="youtube-tab" data-bs-toggle="tab" data-bs-target="#youtube-tab-pane" type="button" role="tab" aria-controls="youtube-tab-pane" aria-selected="false">YouTube</button>
-      </li>
+      </li> -->
     </ul>
     <div class="tab-content py-3" id="socialTabsContent">
       <div class="tab-pane fade show active" id="twitter-tab-pane" role="tabpanel" aria-labelledby="twitter-tab" tabindex="0">
@@ -163,7 +163,9 @@
       <h2 class="text-center">Our Partners</h2>
       <div class="container text-center py-4">
         {% for partner in partners %}
-        <img src="{{ partner.img_src }}" alt="{{ partner.name }}" class="partner-logos">
+        <a href="{{ partner.href }}" target="_blank" class="text-decoration-none">
+          <img src="{{ partner.img_src }}" alt="{{ partner.name }}" class="partner-logos">
+        </a>
         {% endfor %}
       </div>
     </div>
@@ -175,11 +177,12 @@
       <h2 class="text-center">Local Sponsors</h2>
       <div class="container text-center py-4">
         {% for sponsor in sponsors %}
-        <img src="{{ sponsor.img_src }}" alt="{{ sponsor.name }}" class="sponsor-logos">
+        <a href="{{ sponsor.href }}" target="_blank" class="text-decoration-none">
+          <img src="{{ sponsor.img_src }}" alt="{{ sponsor.name }}" class="sponsor-logos">
+        </a>
         {% endfor %}
       </div>
     </div>
-    
   </div>
 
   <div class="container pt-5 newsletter">
