--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,7 @@
   <title>{{ title }} - Greenville United Football Club</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
   {% block css %}{% endblock %}
 </head>
 <body>
@@ -43,7 +44,7 @@
                 <li><a class="dropdown-item" href="{{ url_for('about.show_league') }}">League</a></li>
                 <li><a class="dropdown-item" href="{{ url_for('about.show_club') }}">Club</a></li>
                 <li><a class="dropdown-item" href="{{ url_for('about.show_team') }}">Team</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('about.show_players') }}">Players</a></li>
+                <!-- <li><a class="dropdown-item" href="{{ url_for('about.show_players') }}">Players</a></li> -->
               </ul>
             </li>
             <li class="nav-item dropdown hoverable">
@@ -73,7 +74,7 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="{{ url_for('partners.show_local_sponsors') }}">Local Sponsors</a></li>
                 <li><a class="dropdown-item" href="{{ url_for('partners.show_partner') }}">Become a Partner</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('partners.show_donation') }}">Make a Donation</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('main.show_donate') }}">Make a Donation</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown hoverable">
@@ -87,9 +88,9 @@
               </ul>
             </li>
           </ul>
-          {% if inSeason %}
           <div class="ms-auto">
-            <a href="{{ url_for('community.show_schedule') }}" class="text-decoration-none">
+            {% if inSeason %}
+            <a href="{{ url_for('community.show_schedule') }}" class="text-decoration-none me-3">
               <div class="container schedule-btn">
                 <div class="col">
                   <div class="row">
@@ -113,8 +114,9 @@
                 </div>
               </div>
             </a>
+            {% endif %}
+            <a href="{{ url_for('main.show_donate') }}" class="text-decoration-none donate-btn btn">Donate</a>
           </div>
-          {% endif %}
         </div>
       </div>
     </nav>
@@ -173,9 +175,9 @@
     </div>
   </footer>
   <script src="{{ url_for('static', filename='js/base.js') }}"></script>
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
   {% block js %}{% endblock %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
-  <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 </body>
 </html>
