updates for donation form

--- a/app/main/templates/main/index.html
+++ b/app/main/templates/main/index.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% block meta %}
+  <meta name="description" content="Greenville United is going national! Make a donation today to help us bring our love of the sport to Greenville, and all of Eastern North Carolina.">
+  <meta name="keywords" content="greenville, greenville nc, greenville nc soccer, minor league soccer, first flight league, greenville united, greenville united football club, greenville soccer club, greenville soccer team, greenville nc soccer team, greenville nc soccer club, greenville nc soccer team">
+{% endblock %}
+
 {% block css %}
   <link rel="stylesheet" href="{{ url_for('static', filename='css/main-index.css') }}">
 {% endblock %}
