--- a/app/partners/templates/partners/donation.html
+++ b/app/partners/templates/partners/donation.html
@@ -42,7 +42,7 @@
             <div class="input-group-text" id="radio-back">
               <input class="form-check-input mt-0" type="radio" id="radio4" value="" name="donations" aria-label="radio button for custom donation amount">
             </div>
-            <input type="number" class="form-control form-control-plaintext" aria-label="Text input with radio button" placeholder="Enter custom amount" id="other-input" readonly>
+            <input type="number" class="form-control form-control-plaintext" aria-label="Text input with radio button" value="" placeholder="Enter custom amount" id="other-input" readonly>
           </div>
         </div>
       </div>
@@ -115,18 +115,18 @@
             <div class="form-floating">
               <select class='form-select' name='expm' id='expm' required>
                 <option value=''>Month</option>
-                <option value='01'>January</option>
-                <option value='02'>February</option>
-                <option value='03'>March</option>
-                <option value='04'>April</option>
-                <option value='05'>May</option>
-                <option value='06'>June</option>
-                <option value='07'>July</option>
-                <option value='08'>August</option>
-                <option value='09'>September</option>
-                <option value='10'>October</option>
-                <option value='11'>November</option>
-                <option value='12'>December</option>
+                <option value='01'>January (01)</option>
+                <option value='02'>February (02)</option>
+                <option value='03'>March (03)</option>
+                <option value='04'>April (04)</option>
+                <option value='05'>May (05)</option>
+                <option value='06'>June (06)</option>
+                <option value='07'>July (07)</option>
+                <option value='08'>August (08)</option>
+                <option value='09'>September (09)</option>
+                <option value='10'>October (10)</option>
+                <option value='11'>November (11)</option>
+                <option value='12'>December (12)</option>
               </select>
               <label for="expm">Exp. Month</label> 
               <div class="invalid-feedback">
