--- a/app/templates/site-map.html
+++ b/app/templates/site-map.html
@@ -3,18 +3,19 @@
 {% block main %}
 <div class="container-fluid mt-0" style="background-color: var(--gufc-green);">
     <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 pt-4">
+      {% for section in sections %}
       <div class="col mb-3 ms-2">
-        <h5><a class='text-decoration-none footer-link' href="{{ url_for('about.show_index')}}">About</a></h5>
+        <h5><a class='text-decoration-none footer-link' href="{{ section.headerHref }}">{{ section.name }}</a></h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="{{ url_for('about.show_vmc')}}" class="nav-link p-0 footer-link">Vision, Mission, Core</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('about.show_league')}}" class="nav-link p-0 footer-link">League</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('about.show_club')}}" class="nav-link p-0 footer-link">Club</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('about.show_team')}}" class="nav-link p-0 footer-link">Team</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('about.show_players')}}" class="nav-link p-0 footer-link">Players</a></li>
+          {% for link in section.links %}
+          <li class="nav-item mb-2"><a href="{{ link.href }}" class="nav-link p-0 footer-link">{{ link.name }}</a></li>
+          {% endfor %}
         </ul>
       </div>
+      {% endfor %}
+      
   
-      <div class="col mb-3">
+      <!-- <div class="col mb-3">
         <h5><a class='text-decoration-none footer-link' href="{{ url_for('community.show_index')}}">Community</a></h5>
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="{{ url_for('community.show_youth')}}" class="nav-link p-0 footer-link">Youth</a></li>
@@ -39,7 +40,7 @@
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="{{ url_for('partners.show_local_sponsors')}}" class="nav-link p-0  footer-link">Local Sponsors</a></li>
           <li class="nav-item mb-2"><a href="{{ url_for('partners.show_partner')}}" class="nav-link p-0  footer-link">Become a Partner</a></li>
-          <li class="nav-item mb-2"><a href="{{ url_for('partners.show_donation')}}" class="nav-link p-0  footer-link">Make a Donation</a></li>
+          <li class="nav-item mb-2"><a href="{{ url_for('main.show_donate')}}" class="nav-link p-0  footer-link">Make a Donation</a></li>
           <li class="nav-item mb-2"><a href="{{ url_for('partners.show_donation_pp')}}" class="nav-link p-0  footer-link">Donation Policy</a></li>
         </ul>
       </div>
@@ -50,7 +51,7 @@
           <li class="nav-item mb-2 p-0 "><a href="mailto:store@greenvilleutd.com" class="nav-link p-0  text-decoration-none footer-link">Merchandise Support</a></li>
           <li class="nav-item mb-2 p-0 "><a href="mailto:club@greenvilleutd.com" class="nav-link p-0  text-decoration-none footer-link">Club Support</a></li>
         </ul>
-      </div>
+      </div> -->
     </footer>
 </div>
 {% endblock %}
