--- a/app/main/templates/main/index.html
+++ b/app/main/templates/main/index.html
@@ -136,10 +136,10 @@
       <li class="nav-item" role="presentation">
         <button class="nav-link active" id="twitter-tab" data-bs-toggle="tab" data-bs-target="#twitter-tab-pane" type="button" role="tab" aria-controls="twitter-tab-pane" aria-selected="true">Twitter</button>
       </li>
-      <!-- <li class="nav-item" role="presentation">
+      <li class="nav-item" role="presentation">
         <button class="nav-link" id="facebook-tab" data-bs-toggle="tab" data-bs-target="#facebook-tab-pane" type="button" role="tab" aria-controls="facebook-tab-pane" aria-selected="false">Facebook</button>
       </li>
-      <li class="nav-item" role="presentation">
+      <!-- <li class="nav-item" role="presentation">
         <button class="nav-link" id="instagram-tab" data-bs-toggle="tab" data-bs-target="#instagram-tab-pane" type="button" role="tab" aria-controls="instagram-tab-pane" aria-selected="false">Instagram</button>
       </li>
       <li class="nav-item" role="presentation">
@@ -151,7 +151,7 @@
         <a class="twitter-timeline text-decoration-none py-3" data-height="700" href="https://twitter.com/GreenvilleUtd?ref_src=twsrc%5Etfw">Tweets by GreenvilleUtd</a>
       </div>
       <div class="tab-pane fade" id="facebook-tab-pane" role="tabpanel" aria-labelledby="facebook-tab" tabindex="0">
-        Facebook Feed Unavailable. Please try again later... 
+        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fgreenvilleutd&tabs=timeline&width=340&height=700&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1350607885749663" width="340" height="700" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
       </div>
       <div class="tab-pane fade" id="instagram-tab-pane" role="tabpanel" aria-labelledby="instagram-tab" tabindex="0">
         Instagram Feed Unavailable. Please try again later... 
