--- a/app/partners/templates/partners/donation.html
+++ b/app/partners/templates/partners/donation.html
@@ -14,7 +14,7 @@
     <h1 class="display-5 pt-5 pb-2">Make a donation!</h1>
     <p class="text-muted">Please complete the form below to make a donation. <br> All form fields are required, unless otherwise stated.</p>
     <div class="progress" style="height: 3rem;">
-      <div class="progress-bar" role="progressbar" aria-label="Donation Progress Bar" style="width: {{ percent_of_goal }}%; background-color: var(--gufc-green); color: var(--gufc-yellow);" aria-valuenow="{{ percent_of_goal }}" aria-valuemin="0" aria-valuemax="100"><b>{{ total }}</b></div>
+      <div class="progress-bar" role="progressbar" aria-label="Donation Progress Bar" style="width: {{ percent_of_goal }}; background-color: var(--gufc-green); color: var(--gufc-yellow);" aria-valuenow="{{ percent_of_goal }}" aria-valuemin="0" aria-valuemax="100"><b>{{ total }}</b></div>
       <div class="text-center d-inline-flex align-items-center">
         <b class="px-5">{{ goal }}</b>
       </div>
