--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -171,9 +171,9 @@
           <li class="nav-item">
             <a href="{{ url_for('partners.show_donation_pp') }}" class="nav-link align-middle footer-link px-2">Donation Policy</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a href="{{ url_for('main.show_site_map') }}" class="nav-link align-middle footer-link px-2">Site Map</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a href="mailto:admin@greenvilleutd.com" class="nav-link align-middle footer-link px-2">Contact Us</a>
           </li>
