--- a/app/community/templates/community/2023.html
+++ b/app/community/templates/community/2023.html
@@ -1,15 +1,31 @@
 {% extends 'base.html' %}
 
 {% block css %}
-  
+<link rel="stylesheet" href="{{ url_for('static', filename='css/2023.css') }}">
 {% endblock %}
 
 {% block main %}
-<div class="container-sm">
-    <iframe src="https://calendar.google.com/calendar/embed?height=700&wkst=1&bgcolor=%23E4C441&ctz=America%2FNew_York&showCalendars=0&showTabs=0&showPrint=1&showDate=1&showTitle=1&title=Greenville%20United%20Football%20Club%202022-23%20Event%20Calendar&src=MzY5MjhlZmVhZTY1MDEwMTA1ODBhZDMxMzE2MDM3ZGRkNjBlMDUxNWFjM2NiYTY0YzMzOWZlZGU4ZmQzYjg0ZUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23E67C73" style="border:solid 1px #777" width="900" height="700" frameborder="0" scrolling="no"></iframe>
+<div class="container-sm py-3" id="calendar">
+  <iframe class="mx-auto" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FNew_York&showTitle=1&showDate=1&showPrint=0&showCalendars=0&src=MzY5MjhlZmVhZTY1MDEwMTA1ODBhZDMxMzE2MDM3ZGRkNjBlMDUxNWFjM2NiYTY0YzMzOWZlZGU4ZmQzYjg0ZUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23E67C73" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+</div>
+<div class="container-sm py-3" id="events">
+{% for event in events %}
+  <div class="card mb-3" style="max-width: 540px;">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="..." class="img-fluid rounded-start" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">{{ event.title }}</h5>
+          <p class="card-text">{{ event.description }}</p>
+          <p class="card-text"><small class="text-muted">{{ event.start_date }} @ {{ event.start_time }} - {{ event.end_time }}</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endfor %}
 </div>
 {% endblock %}
 
-{% block js %}
-  
-{% endblock %}
+{% block js %}{% endblock %}
