--- a/app/store/templates/store/team-store.html
+++ b/app/store/templates/store/team-store.html
@@ -1,7 +1,13 @@
-{% extends 'base.html' %}
+{% extends 'store/base.html' %}
 
 {% block css %}
-  
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/store-base.css') }}">
+{% endblock %}
+
+{% block header %}
+    <div class="lower-header">
+        
+    </div>
 {% endblock %}
 
 {% block main %}
