--- a/app/about/templates/about/team.html
+++ b/app/about/templates/about/team.html
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="section">
-      <h1 class="">Team Roster</h1>
+      <!-- <h1 class="">Team Roster</h1>
       <div class="row g-4 py-4">
         {% for player in players %}
         <div class="col-lg-3">
@@ -38,12 +38,12 @@
               <h5 class="card-title">{{ player.name }}</h5>
               <h6 class="card-subtitle mb-2 text-muted">{{ player.position }}</h6>
               <p class="card-text">{{ player.description }}</p>
-              <!-- <a href="#" class="btn btn-primary">Read More</a> -->
+              <a href="#" class="btn btn-primary">Read More</a> 
             </div>
           </div>
         </div>
         {% endfor %}
-      </div>
+      </div> -->
     </div>
     
     <div class="section">
