--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,7 +65,7 @@
               </ul>
             </li>
             <li class="nav-item dropdown hoverable">
-              <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('store.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle dropdownTitle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Store
               </a>
               <ul class="dropdown-menu">
