minor userflow changes

--- a/app/main/templates/main/index.html
+++ b/app/main/templates/main/index.html
@@ -20,7 +20,7 @@
             <div class="carousel-caption pb-4">
               <h1>GUFC is going national!</h1>
               <p>Our Greenville United Football Club is going national! We are on a mission to take this club to the next level, so please consider helping us by making a donation.</p>
-              <a href="{{ url_for('main.show_donate') }}" class="btn carousel-btn">Donate Today</a>
+              <a href="https://store.greenvilleutd.com/pages/make-a-donation-1" target="_blank" class="btn carousel-btn">Donate Today</a>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="20000">
@@ -28,7 +28,7 @@
             <div class="carousel-caption pb-4">
               <h1>Support our team!</h1>
               <p>Visit our team store to help support our club and players. A portion of our proceeds are invested back into the community.</p>
-              <a href="{{ url_for('store.show_index') }}" class="btn carousel-btn">Shop Now</a>
+              <a href="https://store.greenvilleutd.com/" target="_blank" class="btn carousel-btn">Shop Now</a>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="20000">
