--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -122,7 +122,7 @@
               </div>
             </a>
             {% endif %}
-            <a href="{{ url_for('main.show_donate') }}" class="text-decoration-none donate-btn btn">Donate</a>
+            <a href="https://store.greenvilleutd.com/pages/make-a-donation-1" target="_blank" class="text-decoration-none donate-btn btn">Donate</a>
           </div>
         </div>
       </div>
