--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -81,7 +81,7 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="{{ url_for('partners.show_local_sponsors') }}">Local Sponsors</a></li>
                 <li><a class="dropdown-item" href="{{ url_for('partners.show_partner') }}">Become a Partner</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('main.show_donate') }}">Make a Donation</a></li>
+                <li><a class="dropdown-item" target="_blank" href="https://store.greenvilleutd.com/pages/make-a-donation-1">Make a Donation</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown hoverable">
