--- a/app/partners/templates/partners/index.html
+++ b/app/partners/templates/partners/index.html
@@ -5,9 +5,10 @@
 {% endblock %}
 
 {% block main %}
-  <div class="container">
-    <h1 class="py-4">Index.html</h1>
-    <p>Partners page</p>
+  <div class="container-sm">
+    <div class="container">
+      <h1 class="py-4 display-5">Partners</h1>
+    </div>
   </div>
 {% endblock %}
 
