--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,101 +32,98 @@
     </a>
   </div>
   <header class="py-2 shadow-sm" style="background-color: var(--gufc-yellow)">
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('main.show_index') }}">
-          <img src="{{ url_for('static', filename='img/Greenville-Logo.png') }}" alt="Greenville United Logo" height="100px">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item dropdown hoverable">
-              <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('about.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                About
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="{{ url_for('about.show_vmc') }}">Vision, Mission, Core</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('about.show_league') }}">League</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('about.show_club') }}">Club</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('about.show_team') }}">Team</a></li>
-                <!-- <li><a class="dropdown-item" href="{{ url_for('about.show_players') }}">Players</a></li> -->
-              </ul>
-            </li>
-            <li class="nav-item dropdown hoverable">
-              <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('community.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Community
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="{{ url_for('community.show_youth') }}">Youth</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('community.show_engagement') }}">Engagement</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('community.show_schedule') }}">Schedule</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown hoverable">
-              <a class="nav-link dropdown-toggle dropdownTitle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Store
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="{{ url_for('store.show_tickets') }}">Tickets</a></li>
-                <li><a class="dropdown-item" href="https://store.greenvilleutd.com/">Team Store</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('store.show_support') }}">Support</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown hoverable">
-              <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('partners.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Partners
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="{{ url_for('partners.show_local_sponsors') }}">Local Sponsors</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('partners.show_partner') }}">Become a Partner</a></li>
-                <li><a class="dropdown-item" target="_blank" href="https://store.greenvilleutd.com/pages/make-a-donation-1">Make a Donation</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown hoverable">
-              <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('partners.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Contact Us
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="mailto:admin@greenvilleutd.com">Website Support</a></li>
-                <li><a class="dropdown-item" href="mailto:store@greenvilleutd.com">Merchandise Support</a></li>
-                <li><a class="dropdown-item" href="mailto:club@greenvilleutd.com">Club Support</a></li>
-              </ul>
-            </li>
-          </ul>
-          <div class="ms-auto">
-            {% if inSeason %}
-            <a href="{{ url_for('community.show_schedule') }}" class="text-decoration-none me-3">
-              <div class="container schedule-btn">
-                <div class="col">
-                  <div class="row">
-                    {{ match_date }}
-                  </div>
-                  <div class="row">
-                    <div class="col">
-                      {% if home %}
-                      <h1>vs</h1>
-                      {% else %}
-                      <h1>@</h1>
-                      {% endif %}
+    <div class="container-sm">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="{{ url_for('main.show_index') }}">
+            <img src="{{ url_for('static', filename='img/Greenville-Logo.png') }}" alt="Greenville United Logo" height="100px">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown hoverable">
+                <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('about.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  About
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{{ url_for('about.show_vmc') }}">Vision, Mission, Core</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('about.show_league') }}">League</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('about.show_club') }}">Club</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('about.show_team') }}">Team</a></li>
+                  <!-- <li><a class="dropdown-item" href="{{ url_for('about.show_players') }}">Players</a></li> -->
+                </ul>
+              </li>
+              <li class="nav-item dropdown hoverable">
+                <a class="nav-link dropdown-toggle dropdownTitle" href="{{ url_for('community.show_index') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Community
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{{ url_for('community.show_youth') }}">Youth</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('community.show_engagement') }}">Engagement</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('community.show_schedule') }}">Schedule</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown hoverable">
+                <a class="nav-link dropdown-toggle dropdownTitle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Store
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{{ url_for('store.show_tickets') }}">Tickets</a></li>
+                  <li><a class="dropdown-item" href="https://store.greenvilleutd.com/">Team Store</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('store.show_support') }}">Support</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('partners.show_sponsors') }}">
+                  Sponsors
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('partners.show_index') }}">
+                  Partners
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('main.show_contact') }}">
+                  Contact
+                </a>
+              </li>
+            </ul>
+            <div class="ms-auto">
+              {% if inSeason %}
+              <a href="{{ url_for('community.show_schedule') }}" class="text-decoration-none me-3">
+                <div class="container schedule-btn">
+                  <div class="col">
+                    <div class="row">
+                      {{ match_date }}
                     </div>
-                    <div class="col">
-                      <p>{{ opponent }}</p>
+                    <div class="row">
+                      <div class="col">
+                        {% if home %}
+                        <h1>vs</h1>
+                        {% else %}
+                        <h1>@</h1>
+                        {% endif %}
+                      </div>
+                      <div class="col">
+                        <p>{{ opponent }}</p>
+                      </div>
                     </div>
                   </div>
+                  <div class="col">
+                    <img src="{{ img_src }}" alt="{{ img_title }}">
+                  </div>
                 </div>
-                <div class="col">
-                  <img src="{{ img_src }}" alt="{{ img_title }}">
-                </div>
-              </div>
-            </a>
-            {% endif %}
-            <a href="https://store.greenvilleutd.com/pages/make-a-donation-1" target="_blank" class="text-decoration-none donate-btn btn">Donate</a>
+              </a>
+              {% endif %}
+              <a href="https://store.greenvilleutd.com/pages/make-a-donation-1" target="_blank" class="text-decoration-none donate-btn btn">Donate</a>
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
   </header>
   <main role="main" class="pb-5" style="min-height: 80vh;">
     {% block main %}{% endblock %}
