--- a/app/about/templates/about/league.html
+++ b/app/about/templates/about/league.html
@@ -9,11 +9,11 @@
   {{ super() }}
   <div class="container-sm">
     <div class="container text-center py-3">
-      <img src="{{ url_for('static', filename='img/FFL_Logo.png') }}" alt="First Flight League Logo" class="img">
+      <img src="{{ url_for('static', filename='img/NPSL-Logo.png') }}" alt="First Flight League Logo" class="img">
     </div>
-    <h1 class="py-4 text-center">First Flight League</h1>
-    <p>Currently, Greenville United Football Club is a proud member of the <a class='text-decoration-none' href="https://www.firstflightleague.org/" target="_blank">First Flight League</a> (FFL) in North Carolina. The FFL is a fairly new minor league european football league for the eastern and piedmont regions of North Carolina, with the 2021 season being their inaugural season.</p>
-    <p class="py-2">For more information on the league, please visit the website, <a class='text-decoration-none' href="https://www.firstflightleague.org/" target="_blank">here</a>.</p>
+    <h1 class="py-4 text-center">National Premier Soccer League</h1>
+    <p>Greenville United Football Club joined the National Premier Soccer League (NPSL) on January 16th, 2023. The NPSL is one of the largest established men’s soccer leagues in the United States with over 90 teams competing across the country and is a successor to the Men’s Premier Soccer League (MPSL), which was formed in 2002. The NPSL is a member of the United States Adult Soccer Association (USASA) and is thereby affiliated with the United States Soccer Federation (USSF). The NPSL’s cooperative and turnkey ownership platform has led to its explosive growth, countless player development opportunities, and commitment to grow the game in the United States.</p>
+    <p class="py-2">For more information on the league, please visit their website, <a class='text-decoration-none' href="https://www.npsl.com/" target="_blank">here</a>.</p>
   </div>
 {% endblock %}
 
