--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -172,7 +172,7 @@
             <a href="{{ url_for('main.show_site_map') }}" class="nav-link align-middle footer-link px-2">Site Map</a>
           </li> -->
           <li class="nav-item">
-            <a href="mailto:admin@greenvilleutd.com" class="nav-link align-middle footer-link px-2">Contact Us</a>
+            <a href="{{ url_for('main.show_contact') }}" class="nav-link align-middle footer-link px-2">Contact Us</a>
           </li>
         </ul>
       </div>
