--- a/app/main/templates/main/tryouts.html
+++ b/app/main/templates/main/tryouts.html
@@ -39,13 +39,16 @@
         <hr>
         <p class="py-2">Pay the $45 tryout fee, <a class="link" href="https://store.greenvilleutd.com/products/tryout-fees" target="_blank">here</a>, or you can bring payment with you. If the questionnaire or waivers are not completed and submitted, you will not be able to tryout.</p>
     </div>
-    <div class="container py-1">
-        <div class="container-sm w-50">
+    <div class="container py-4 row">
+        <div class="col-6">
             <h1 class="pb-2 text-center">Tryout Details</h1>
             <p class="py-0">Date: Saturday February 18, 2023</p>
             <p class="py-0">Location: ECU North Recreational Complex</p>
             <p class="py-0">Address: 3764 US 264 East, Greenville, NC 27834</p>
             <p class="py-0">Time: 2:00pm - 5:30pm</p>
+        </div>
+        <div class="col-6">
+            <div class="mapouter"><div class="gmap_canvas"><iframe width="450" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=3764%20US%20264%20East,%20Greenville,%20NC%2027834&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/"></a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:450px;}</style><a href="https://www.embedgooglemap.net">google maps on my web site</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:450px;}</style></div></div>
         </div>
     </div>
 </div>
