--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -71,7 +71,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="{{ url_for('store.show_tickets') }}">Tickets</a></li>
-                  <li><a class="dropdown-item" href="https://store.greenvilleutd.com/">Team Store</a></li>
+                  <li><a class="dropdown-item" href="https://store.greenvilleutd.com/" target="_blank">Team Store</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('store.show_support') }}">Support</a></li>
                 </ul>
               </li>
