--- a/app/community/templates/community/youth.html
+++ b/app/community/templates/community/youth.html
@@ -51,7 +51,7 @@
           <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="may-tab-pane" role="tabpanel" aria-labelledby="may-tab" tabindex="0">
                 <div class="text-center py-3">
-                    <p class="py-0">Dates: May 22, 2023 through May 25, 2023</p>
+                    <p class="py-0">Dates: <b>May 22, 2023 through May 25, 2023</b></p>
                     <p class="py-0">Location: ECU North Recreational Complex</p>
                     <p class="py-0">Address: 3764 US 264 East, Greenville, NC 27834</p>
                     <p class="py-0">Time: 6:00pm - 8:30pm</p>
@@ -62,10 +62,10 @@
             </div>
             <div class="tab-pane fade" id="june-tab-pane" role="tabpanel" aria-labelledby="june-tab" tabindex="0">
                 <div class="text-center py-3">
-                    <p class="py-0">Dates: June 19, 2023 through June 22, 2023</p>
+                    <p class="py-0">Dates: <b>June 19, 2023 through June 22, 2023</b></p>
                     <p class="py-0">Location: ECU North Recreational Complex</p>
                     <p class="py-0">Address: 3764 US 264 East, Greenville, NC 27834</p>
-                    <p class="py-0">Time: 9:00am - 12:00pm</p>
+                    <p class="py-0">Time: <b>9:00am - 12:00pm</b></p>
                 </div>
                 <div class="text-center mx-auto">
                     <div class="mapouter mx-auto"><div class="gmap_canvas"><iframe width="450" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=3764%20US%20264%20East,%20Greenville,%20NC%2027834&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/"></a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:450px;}</style><a href="https://www.embedgooglemap.net">google maps on my web site</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:450px;}</style></div></div>
