main page updates

--- a/app/main/templates/main/index.html
+++ b/app/main/templates/main/index.html
@@ -16,7 +16,7 @@
       <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="20000">
-            <img src="{{ url_for('static', filename='img/header-img.png') }}" class="d-block w-100 img" alt="...">
+            <img src="{{ url_for('static', filename='img/carosouel-1.jpeg') }}" class="d-block w-100 img" alt="...">
             <div class="carousel-caption pb-4">
               <h1>Open Tryouts for GUFC!</h1>
               <p>We are hosting open tryouts for our team and invite the community to come out and showcase your skills.</p>
